修复plopjs生成代码

--- a/plop-templates/component/index.hbs
+++ b/plop-templates/component/index.hbs
@@ -1,5 +1,4 @@
-<script setup{{#if isGlobal}} name="{{ properCase name }}"{{/if}}>
-// const { proxy } = getCurrentInstance()
+<script lang="ts" setup{{#if isGlobal}} name="{{ properCase name }}"{{/if}}>
 </script>
 
 <template>
