--- a/plop-templates/module/detail.hbs
+++ b/plop-templates/module/detail.hbs
@@ -1,56 +1,64 @@
-<script setup name="{{ properCase componentName }}">
-import useSettingsStore from '@/store/modules/settings'
+<script lang="ts" setup name="{{ properCase componentName }}">
 import DetailForm from './components/DetailForm/index.vue'
-
-const { proxy } = getCurrentInstance()
+import useSettingsStore from '@/store/modules/settings'
+import eventBus from '@/util/eventBus'
 
 const settingsStore = useSettingsStore()
+const route = useRoute()
+const router = useRouter()
+const tabbar = useTabbar()
+const form = ref<InstanceType<typeof DetailForm>>()
 
 function onSubmit() {
-    proxy.$refs['form'].submit(() => {
-        proxy.$eventBus.emit('get-data-list')
-        goBack()
-    })
+  form.value?.submit(() => {
+    eventBus.emit('get-data-list')
+    goBack()
+  })
 }
 
 function onCancel() {
-    goBack()
+  goBack()
 }
 
 // 返回列表页
 function goBack() {
-    if (settingsStore.tabbar.enable && !settingsStore.tabbar.mergeTabs) {
-        proxy.$tabbar.close({ name: 'pagesExampleGeneralFormModeList' })
-    } else {
-        proxy.$router.push({ name: 'pagesExampleGeneralFormModeList' })
-    }
+  if (settingsStore.settings.tabbar.enable && settingsStore.settings.tabbar.mergeTabsBy !== 'activeMenu') {
+    tabbar.close({ name: 'pagesExampleGeneralFormModeList' })
+  }
+  else {
+    router.push({ name: 'pagesExampleGeneralFormModeList' })
+  }
 }
 </script>
 
 <template>
-    <div>
-        <page-header :title="$route.name == 'routerName' ? '新增{{ cname }}' : '编辑{{ cname }}'">
-            <el-button size="default" round @click="goBack">
-                <template #icon>
-                    <el-icon>
-                        <svg-icon name="ep:arrow-left" />
-                    </el-icon>
-                </template>
-                返回
-            </el-button>
-        </page-header>
-        <page-main>
-            <el-row>
-                <el-col :md="24" :lg="16">
-                    <DetailForm :id="$route.params.id" ref="form" />
-                </el-col>
-            </el-row>
-        </page-main>
-        <fixed-action-bar>
-            <el-button type="primary" size="large" @click="onSubmit">提交</el-button>
-            <el-button size="large" @click="onCancel">取消</el-button>
-        </fixed-action-bar>
-    </div>
+  <div>
+    <page-header :title="route.name === 'routerName' ? '新增Test' : '编辑Test'">
+      <el-button size="default" round @click="goBack">
+        <template #icon>
+          <el-icon>
+            <svg-icon name="ep:arrow-left" />
+          </el-icon>
+        </template>
+        返回
+      </el-button>
+    </page-header>
+    <page-main>
+      <el-row>
+        <el-col :md="24" :lg="16">
+          <DetailForm :id="route.params.id as string" ref="form" />
+        </el-col>
+      </el-row>
+    </page-main>
+    <fixed-action-bar>
+      <el-button type="primary" size="large" @click="onSubmit">
+        提交
+      </el-button>
+      <el-button size="large" @click="onCancel">
+        取消
+      </el-button>
+    </fixed-action-bar>
+  </div>
 </template>
 
 <style lang="scss" scoped>
