--- a/plop-templates/page/index.hbs
+++ b/plop-templates/page/index.hbs
@@ -1,16 +1,15 @@
-<script setup name="{{ properCase componentName }}">
-// const { proxy } = getCurrentInstance()
+<script lang="ts" setup name="{{ properCase componentName }}">
 // const router = useRouter()
 // const route = useRoute()
 </script>
 
 <template>
-    <div>
-        <page-header title="{{ cname }}" />
-        <page-main>
-            页面内容区域
-        </page-main>
-    </div>
+  <div>
+    <page-header title="{{ cname }}" />
+      <page-main>
+        页面内容区域
+      </page-main>
+  </div>
 </template>
 
 <style lang="scss" scoped>
