--- a/plop-templates/module/api.hbs
+++ b/plop-templates/module/api.hbs
@@ -6,7 +6,7 @@ export default {
   // 后端获取路由数据
   list: <T>() => api.get<T>({
     url: `${prefix}/list`,
-    baseURL: '/mock/',
+    // baseURL: '/mock/',
   }),
   // // 基于文件系统路由模式下，后端获取导航菜单数据
   detail: <T> (id: string | number) => api.get<T>({
@@ -14,24 +14,24 @@ export default {
     params: {
       id,
     },
-    baseURL: '/mock/',
+    // baseURL: '/mock/',
   }),
   create: <T> (data: any) => api.post<T>({
     url: `${prefix}/create`,
     data,
-    baseURL: '/mock/',
+    // baseURL: '/mock/',
   }),
   edit: <T> (data: any) => api.post<T>({
     url: `${prefix}/edit`,
     data,
-    baseURL: '/mock/',
+    // baseURL: '/mock/',
   }),
   delete: <T> (id: string) => api.post<T>({
     url: `${prefix}/delete`,
     data: {
       id,
     },
-    baseURL: '/mock/',
+    // baseURL: '/mock/',
   }),
 
 }
