--- a/plop-templates/module/list.hbs
+++ b/plop-templates/module/list.hbs
@@ -11,12 +11,13 @@ const router = useRouter()
 
 const data = ref({
   loading: false,
+  tableAutoHeight: true,
   /**
-  * 详情展示模式
-  * router 路由跳转
-  * dialog 对话框
-  * drawer 抽屉
-  */
+   * 详情展示模式
+   * router 路由跳转
+   * dialog 对话框
+   * drawer 抽屉
+   */
   formMode: 'router',
   // 详情
   formModeProps: {
@@ -26,7 +27,11 @@ const data = ref({
   // 搜索
   search: {
     title: '',
+    title2: '',
+    title3: '',
+    title4: '',
   },
+  searchFold: true,
   // 批量操作
   batch: {
     enable: false,
@@ -55,9 +60,14 @@ onBeforeUnmount(() => {
 
 function getDataList() {
   data.value.loading = true
-  const params = getParams()
+  const params = {
+    ...getParams(),
+    ...data.value.search.title && {
+      title: data.value.search.title,
+    },
+  }
   data.value.search.title && (params.title = data.value.search.title)
-  crud{{properCase moduleName}}.list<any>().then((res) => {
+  crud{{properCase moduleName}}.list<any>(params).then((res) => {
     data.value.loading = false
     data.value.dataList = res.data.list
     pagination.value.total = res.data.total
@@ -121,50 +131,81 @@ function onDel(row: any) {
 
 <template>
   <div>
-    <page-header title="Test管理" />
+    <page-header title="{{cname}}" />
     <page-main>
-      <el-button type="primary" size="large" @click="onCreate">
-        <template #icon>
-          <el-icon>
-            <svg-icon name="ep:plus" />
-          </el-icon>
+      <search-bar
+          :fold="data.searchFold"
+          :show-toggle="false"
+      >
+        <template #default="{ fold }">
+          <el-form class="search-form" :model="data.search" size="default" inline inline-message label-width="100px" label-suffix="：">
+            <el-form-item label="标题">
+              <el-input
+                  v-model="data.search.title" placeholder="请输入标题，支持模糊查询" clearable
+                  @keydown.enter="currentChange()" @clear="currentChange()"
+              />
+            </el-form-item>
+            <el-form-item v-show="!fold" label="标题2">
+              <el-input
+                  v-model="data.search.title2" placeholder="请输入标题，支持模糊查询" clearable
+                  @keydown.enter="currentChange()" @clear="currentChange()"
+              />
+            </el-form-item>
+            <el-form-item v-show="!fold" label="标题3">
+              <el-input
+                  v-model="data.search.title3" placeholder="请输入标题，支持模糊查询" clearable
+                  @keydown.enter="currentChange()" @clear="currentChange()"
+              />
+            </el-form-item>
+            <el-form-item v-show="!fold" label="标题4">
+              <el-input
+                  v-model="data.search.title4" placeholder="请输入标题，支持模糊查询" clearable
+                  @keydown.enter="currentChange()" @clear="currentChange()"
+              />
+            </el-form-item>
+            <el-form-item>
+              <el-button type="primary" @click="currentChange()">
+                <template #icon>
+                  <el-icon>
+                    <svg-icon name="ep:search" />
+                  </el-icon>
+                </template>
+                筛选
+              </el-button>
+              <el-button type="primary" link @click="data.searchFold = !fold">
+                <template #icon>
+                  <el-icon>
+                    <svg-icon :name="fold ? 'i-ep:caret-bottom' : 'i-ep:caret-top'" />
+                  </el-icon>
+                </template>
+                {{ fold ? '展开' : '收起' }}
+              </el-button>
+            </el-form-item>
+          </el-form>
         </template>
-        新增Test
-      </el-button>
-      <search-bar>
-        <el-form :model="data.search" size="default" label-width="100px" label-suffix="：">
-          <el-row>
-            <el-col :span="12">
-              <el-form-item label="标题">
-                <el-input v-model="data.search.title" placeholder="请输入标题，支持模糊查询" clearable @keydown.enter="currentChange()" @clear="currentChange()" />
-              </el-form-item>
-            </el-col>
-          </el-row>
-          <el-form-item>
-            <el-button type="primary" @click="currentChange()">
-              <template #icon>
-                <el-icon>
-                  <svg-icon name="ep:search" />
-                </el-icon>
-              </template>
-              筛选
-            </el-button>
-          </el-form-item>
-        </el-form>
       </search-bar>
-      <batch-action-bar v-if="data.batch.enable" :data="data.dataList" :selection-data="data.batch.selectionDataList" @check-all="table?.toggleAllSelection()" @check-null="table?.clearSelection()">
-        <el-button size="default">
+      <el-divider border-style="dashed" />
+      <el-space wrap>
+        <el-button type="primary" size="default" @click="onCreate">
+          <template #icon>
+            <el-icon>
+              <svg-icon name="ep:plus" />
+            </el-icon>
+          </template>
+          新增
+        </el-button>
+        <el-button size="default" :disabled="!data.batch.selectionDataList.length">
           单个批量操作按钮
         </el-button>
         <el-button-group>
-          <el-button size="default">
+          <el-button size="default" :disabled="!data.batch.selectionDataList.length">
             批量操作按钮组1
           </el-button>
-          <el-button size="default">
+          <el-button size="default" :disabled="!data.batch.selectionDataList.length">
             批量操作按钮组2
           </el-button>
         </el-button-group>
-      </batch-action-bar>
+      </el-space>
       <ElTable ref="table" v-loading="data.loading" class="list-table" :data="data.dataList" border stripe highlight-current-row @sort-change="sortChange" @selection-change="data.batch.selectionDataList = $event">
         <el-table-column v-if="data.batch.enable" type="selection" align="center" fixed />
         <el-table-column prop="title" label="标题" />
@@ -186,7 +227,47 @@ function onDel(row: any) {
 </template>
 
 <style lang="scss" scoped>
-.el-pagination {
-  margin-top: 20px;
-}
+  .el-pagination {
+    margin-top: 20px;
+  }
+  .absolute-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    .page-header {
+      margin-bottom: 0;
+    }
+    .page-main {
+      flex: 1;
+      overflow: auto;
+      display: flex;
+      flex-direction: column;
+      .search-container {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .page-main {
+    .search-form {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: -18px;
+      :deep(.el-form-item) {
+        flex: 1 1 300px;
+        &:last-child {
+          margin-left: auto;
+          .el-form-item__content {
+            justify-content: flex-end;
+          }
+        }
+      }
+
+    }
+    .el-divider {
+      margin-inline:-20px;width: calc(100% + 40px);
+    }
+  }
 </style>
