更新 package.json 依赖

--- a/plop-templates/module/form.hbs
+++ b/plop-templates/module/form.hbs
@@ -3,12 +3,13 @@ import type { FormInstance } from 'element-plus'
 import { ElMessage } from 'element-plus'
 import crud{{properCase moduleName}} from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
 
-const props = defineProps({
-  id: {
-    type: [Number, String],
-    default: '',
-  },
-})
+const props = withDefaults(
+  defineProps<{ 
+  id: number| string, 
+  }>(),
+  {
+    id: '',
+  })
 
 const data = ref({
   loading: false,
