--- a/plop-templates/page/index.hbs
+++ b/plop-templates/page/index.hbs
@@ -1,4 +1,4 @@
-<script lang="ts" setup name="{{ properCase componentName }}">
+<script lang="ts" setup{{ properCase componentName }}">
 // const router = useRouter()
 // const route = useRoute()
 </script>
