--- a/plop-templates/module/detail.hbs
+++ b/plop-templates/module/detail.hbs
@@ -1,8 +1,11 @@
-<script lang="ts" setup name="{{ properCase componentName }}">
+<script lang="ts" setup>
 import DetailForm from './components/DetailForm/index.vue'
 import useSettingsStore from '@/store/modules/settings'
 import eventBus from '@/util/eventBus'
 
+defineOptions({
+  name: '{{ properCase componentName }}',
+})
 const settingsStore = useSettingsStore()
 const route = useRoute()
 const router = useRouter()
