--- a/plop-templates/module/api.hbs
+++ b/plop-templates/module/api.hbs
@@ -1,33 +1,50 @@
 import api from '@/api'
+import type { BasicPageParams } from '@/api/model/baseModel'
+import type { {{ pascalCase moduleName }}ListItem, {{ pascalCase moduleName }}PageListGetResultModel, {{ pascalCase moduleName }}Params } from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
 
 // 前缀 变量
 const prefix = '/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
-export default {
-  // 后端获取路由数据
-  list: <T>(params: any) => api.get<T>({
+export function getListRole(params: BasicPageParams & {{ pascalCase moduleName }}Params) {
+  return api.get<{{ pascalCase moduleName }}PageListGetResultModel>({
     url: `${prefix}/list`,
     params,
-  }),
-  // // 基于文件系统路由模式下，后端获取导航菜单数据
-  detail: <T> (id: string | number) => api.get<T>({
+  })
+}
+export function detailRole(id: string | number) {
+  return api.get<{{ pascalCase moduleName }}ListItem>({
     url: `${prefix}/detail`,
     params: {
       id,
     },
-  }),
-  create: <T> (data: any) => api.post<T>({
+  })
+}
+
+export function createRole(data: any) {
+  return api.post<{{ pascalCase moduleName }}ListItem>({
     url: `${prefix}/create`,
     data,
-  }),
-  edit: <T> (data: any) => api.post<T>({
+  })
+}
+
+export function editRole(data: any) {
+  return api.post<void>({
     url: `${prefix}/edit`,
     data,
-  }),
-  delete: <T> (id: string) => api.post<T>({
+  })
+}
+
+export function deleteRole(id: string) {
+  return api.post<void>({
     url: `${prefix}/delete`,
     data: {
       id,
     },
-  }),
-
+  })
+}
+export default {
+  list: getListRole,
+  detail: detailRole,
+  create: createRole,
+  edit: editRole,
+  delete: deleteRole,
 }
