--- a/plop-templates/module/form.hbs
+++ b/plop-templates/module/form.hbs
@@ -4,8 +4,9 @@ import { ElMessage } from 'element-plus'
 import crud{{properCase moduleName}} from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
 
 export interface Props {
-  id?: number | string
+  id?: string
 }
+
 const props = withDefaults(defineProps<Props>(), {
   id: '',
 })
@@ -40,23 +41,20 @@ function getInfo() {
 }
 
 defineExpose({
+  open() {
+  },
   submit(callback: any) {
-    if (data.value.form.id === '') {
-      form.value?.validate((valid) => {
-        if (valid) {
-          crud{{properCase moduleName}}.create<any>(data.value.form).then(() => {
+    form.value?.validate((valid) => {
+      if (valid) {
+        if (data.value.form.id === '') {
+          crud{{properCase moduleName}}.create(data.value.form).then(() => {
             ElMessage.success({
               message: '模拟新增成功',
               center: true,
             })
             callback && callback()
           })
-        }
-      })
-    }
-    else {
-      form.value?.validate((valid) => {
-        if (valid) {
+        } else {
           crud{{properCase moduleName}}.edit(data.value.form).then(() => {
             ElMessage.success({
               message: '模拟编辑成功',
@@ -65,8 +63,8 @@ defineExpose({
             callback && callback()
           })
         }
-      })
-    }
+      }
+    })
   },
 })
 </script>
@@ -75,7 +73,7 @@ defineExpose({
   <div v-loading="data.loading">
     <el-form ref="form" :model="data.form" :rules="data.rules" label-width="120px" label-suffix="：">
       <el-form-item label="标题" prop="title">
-        <el-input v-model="data.form.title" placeholder="请输入标题" />
+        <el-input v-model="data.form.title" placeholder="请输入标题"/>
       </el-form-item>
     </el-form>
   </div>
