--- a/plop-templates/module/list.hbs
+++ b/plop-templates/module/list.hbs
@@ -1,17 +1,26 @@
 <script lang="ts" setup>
-import type { {{ pascalCase moduleName }}Params } from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
-import { ElMessage, ElMessageBox, ElTable } from 'element-plus'
-import FormMode from './components/FormMode/index.vue'
-import usePagination from '@/util/usePagination.js'
-import eventBus from '@/util/eventBus'
-import crud{{properCase moduleName}} from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
+  import {ElMessage, ElMessageBox, ElTable} from 'element-plus'
+  import {get} from 'lodash-es'
+  import FormMode from './components/FormMode/index.vue'
+  import type {{{ pascalCase moduleName }}Params} from '@/api/modules/{{#if
+        relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
+  import usePagination from '@/util/usePagination.js'
+  import eventBus from '@/util/eventBus'
+  import crud{{properCase moduleName}}
+    from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
 
-defineOptions({
-  name: '{{ properCase componentName }}',
-})
-const { pagination, getParams, onSizeChange, onCurrentChange, onSortChange } = usePagination()
-const router = useRouter()
-// const route = useRoute()
+  defineOptions({
+    name: '{{ properCase componentName }}',
+  })
+  const {
+    pagination,
+    getParams,
+    onSizeChange,
+    onCurrentChange,
+    onSortChange
+  } = usePagination()
+  const router = useRouter()
+  // const route = useRoute()
 
 const data = ref({
   loading: false,
@@ -56,32 +65,39 @@ onMounted(() => {
   }
 })
 
-onBeforeUnmount(() => {
-  if (data.value.formMode === 'router') {
-    eventBus.off('get-data-list')
+  onBeforeUnmount(() => {
+    if (data.value.formMode === 'router') {
+      eventBus.off('get-data-list')
+    }
+  })
+
+  async function getDataList(current?: number) {
+    if (current && current === 1) {
+      pagination.value.page = current
+    }
+    data.value.loading = true
+    const params = getParams<{{ pascalCase moduleName }}Params>({
+      ...data.value.search
+    })
+    data.value.search.title && (params.title = data.value.search.title)
+    const res = await crud{{properCase moduleName}}.list(params)
+    data.value.dataList = get(res, 'records', [])
+    pagination.value.total = Number(res.total)
+    pagination.value.page = Number(get(res, 'current', 1))
+    // pagination.value.size = res.size
+    setTimeout(() => {
+      data.value.loading = false
+    }, 100)
   }
-})
 
-function getDataList() {
-  data.value.loading = true
-  const params = getParams<{{ pascalCase moduleName }}Params>({
-  })
-  data.value.search.title && (params.title = data.value.search.title)
-  crud{{properCase moduleName}}.list(params).then((res) => {
-    data.value.loading = false
-    data.value.dataList = res.row
-    pagination.value.total = res.total
-  })
-}
+  // 每页数量切换
+  function sizeChange(size: number) {
+    onSizeChange(size).then(() => getDataList())
+  }
 
-// 每页数量切换
-function sizeChange(size: number) {
-  onSizeChange(size).then(() => getDataList())
-}
-
-// 当前页码切换（翻页）
-function currentChange(page = 1) {
-  onCurrentChange(page).then(() => getDataList())
+  // 当前页码切换（翻页）
+  function currentChange(page = 1) {
+    onCurrentChange(page).then(() => getDataList())
 }
 
 // 字段排序
@@ -109,28 +125,35 @@ function onEdit(row: any) {
         id: row.id,
       },
     })
-  }
-  else {
+  } else {
     data.value.formModeProps.id = row.id
     data.value.formModeProps.visible = true
   }
 }
 
-function onDel(row: any) {
-  ElMessageBox.confirm(`确认删除「${row.title}」吗？`, '确认信息').then(() => {
-    crud{{properCase moduleName}}.delete(row.id).then(() => {
-      getDataList()
-      ElMessage.success({
-        message: '模拟删除成功',
-        center: true,
+  function onDel(row?: any) {
+    let ids: number[] = []
+    if (row) {
+      ids.push(row.id)
+    } else {
+      ids = data.value.batch.selectionDataList.map(item => item.id) as number[]
+    }
+    ElMessageBox.confirm(`确认删除数量「${ids.length}」吗？`, '确认信息').then(() => {
+      crud{{properCase moduleName}}.delete(ids).then(() => {
+        getDataList()
+        ElMessage.success({
+          message: '模拟删除成功',
+          center: true,
+        })
       })
+    }).catch(() => {
     })
-  }).catch(() => {})
-}
+  }
+
 </script>
 
 <template>
-  <div>
+  <div :class="{ 'absolute-container': data.tableAutoHeight }">
     <page-header title="{{cname}}" />
     <page-main>
       <search-bar
@@ -184,18 +207,23 @@ function onDel(row: any) {
           </el-form>
         </template>
       </search-bar>
-      <el-divider border-style="dashed" />
+      <el-divider border-style="dashed"/>
       <el-space wrap>
         <el-button type="primary" size="default" @click="onCreate">
           <template #icon>
             <el-icon>
-              <svg-icon name="ep:plus" />
+              <svg-icon name="ep:plus"/>
             </el-icon>
           </template>
           新增
         </el-button>
-        <el-button size="default" :disabled="!data.batch.selectionDataList.length">
-          单个批量操作按钮
+        <el-button size="default" :disabled="!data.batch.selectionDataList.length" @click="onDel">
+          <template #icon>
+            <el-icon>
+              <svg-icon name="ep:delete"/>
+            </el-icon>
+          </template>
+          删除
         </el-button>
         <el-button-group>
           <el-button size="default" :disabled="!data.batch.selectionDataList.length">
