--- a/plop-templates/module/api.hbs
+++ b/plop-templates/module/api.hbs
@@ -1,50 +1,55 @@
 import api from '@/api'
 import type { BasicPageParams } from '@/api/model/baseModel'
-import type { {{ pascalCase moduleName }}ListItem, {{ pascalCase moduleName }}PageListGetResultModel, {{ pascalCase moduleName }}Params } from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase moduleName }}Model'
+import type { {{ pascalCase moduleName }}ListItem, {{ pascalCase moduleName }}PageListGetResultModel, {{ pascalCase
+    moduleName }}Params } from '@/api/modules/{{#if relativePath}}{{ relativePath }}/{{/if}}model/{{ snakeCase
+    moduleName }}Model'
 
 // 前缀 变量
 const prefix = '/{{#if relativePath}}{{ relativePath }}/{{/if}}{{ snakeCase moduleName }}'
-export function getListRole(params: BasicPageParams & {{ pascalCase moduleName }}Params) {
-  return api.get<{{ pascalCase moduleName }}PageListGetResultModel>({
-    url: `${prefix}/list`,
+export function getListRole(params: BasicPageParams
+<{{ pascalCase moduleName }}Params>) {
+  return api.post
+  <{{ pascalCase moduleName }}PageListGetResultModel>({
+    url: `${prefix}/page`,
     params,
-  })
-}
-export function detailRole(id: string | number) {
-  return api.get<{{ pascalCase moduleName }}ListItem>({
-    url: `${prefix}/detail`,
-    params: {
+    })
+    }
+    export function detailRole(id: string | number) {
+    return api.get
+    <{{ pascalCase moduleName }}ListItem>({
+      url: `${prefix}/detail`,
+      params: {
       id,
-    },
-  })
+      },
+      })
 }
 
 export function createRole(data: any) {
   return api.post<{{ pascalCase moduleName }}ListItem>({
-    url: `${prefix}/create`,
-    data,
-  })
-}
+        url: `${prefix}`,
+        data,
+        })
+        }
 
-export function editRole(data: any) {
-  return api.post<void>({
-    url: `${prefix}/edit`,
-    data,
-  })
-}
+        export function editRole(data: any) {
+        return api.put
+        <void>({
+          url: `${prefix}`,
+          data,
+          })
+          }
 
-export function deleteRole(id: string) {
-  return api.post<void>({
-    url: `${prefix}/delete`,
-    data: {
-      id,
-    },
-  })
-}
-export default {
-  list: getListRole,
-  detail: detailRole,
-  create: createRole,
-  edit: editRole,
-  delete: deleteRole,
-}
+          export function deleteRole(ids: string[]) {
+          return api.delete
+          <void>({
+            url: `${prefix}`,
+            data: ids,
+            })
+            }
+            export default {
+            list: getListRole,
+            detail: detailRole,
+            create: createRole,
+            edit: editRole,
+            delete: deleteRole,
+            }
