--- a/plop-templates/module/mode.hbs
+++ b/plop-templates/module/mode.hbs
@@ -1,61 +1,58 @@
 <script lang="ts" setup>
-  import type {Props as DetailFormProps} from '../DetailForm/index.vue'
-  import DetailForm from '../DetailForm/index.vue'
+import type {Props as DetailFormProps} from '../DetailForm/index.vue'
+import DetailForm from '../DetailForm/index.vue'
 
-  export interface Props extends DetailFormProps {
-    modelValue?: boolean
-    mode?: 'dialog' | 'drawer' | string
-  }
+export interface Props extends DetailFormProps {
+  modelValue?: boolean
+  mode?: 'dialog' | 'drawer' | string
+}
 
-  const props = withDefaults(defineProps<Props>(),
-      {
-        id: '',
-        modelValue: false,
-        mode: 'dialog',
-      })
-
-  const emits = defineEmits<{
-    'update:modelValue': [
-      value: boolean,
-    ]
-    success: []
-  }>()
-
-  const myVisible = computed({
-    get() {
-      return props.modelValue
-    },
-    set(val) {
-      emits('update:modelValue', val)
-    },
-  })
-
-  const form = ref<InstanceType<typeof DetailForm>>()
-
-  const title = computed(() => props.id === '' ? '新增{{ cname }}' : '编辑{{ cname }}')
-
-  function onSubmit() {
-    // submit() 为组件内部方法
-    form.value?.submit(() => {
-      emits('success')
-      onCancel()
+const props = withDefaults(defineProps<Props>(),
+    {
+      id: '',
+      modelValue: false,
+      mode: 'dialog',
     })
-  }
 
-  function onCancel() {
-    myVisible.value = false
-  }
+const emits = defineEmits<{
+  'update:modelValue': [
+    value: boolean,
+  ]
+  success: []
+}>()
 
-  function handleOpen() {
-    // handleOpen() 为组件内部方法
-    form.value?.open()
-  }
+const myVisible = computed({
+  get() {
+    return props.modelValue
+  },
+  set(val) {
+    emits('update:modelValue', val)
+  },
+})
+
+const form = ref<InstanceType<typeof DetailForm>>()
+
+const title = computed(() => props.id === '' ? '新增{{ cname }}' : '编辑{{ cname }}')
+
+function onSubmit() {
+  // submit() 为组件内部方法
+  form.value?.submit(() => {
+    emits('success')
+    onCancel()
+  })
+}
+
+function onCancel() {
+  myVisible.value = false
+}
+
+
 </script>
 
 <template>
   <div>
     <el-dialog v-if="props.mode === 'dialog'" v-model="myVisible" :title="title" width="600px"
-               :close-on-click-modal="false" append-to-body destroy-on-close @open="handleOpen"
+               :close-on-click-modal="false" append-to-body destroy-on-close
     >
       <DetailForm ref="form" v-bind="$props"/>
       <template #footer>
@@ -68,7 +65,7 @@
       </template>
     </el-dialog>
     <el-drawer v-else-if="props.mode === 'drawer'" v-model="myVisible" :title="title" size="600px"
-               :close-on-click-modal="false" destroy-on-close @open="handleOpen"
+               :close-on-click-modal="false" destroy-on-close
     >
       <DetailForm ref="form" v-bind="$props"/>
       <template #footer>
